--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -27,9 +27,9 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav ml-auto">
-      <a class="nav-item nav-link " href="http://twitter.com/@dayam_md">Twitter </a>
+      <a class="nav-item nav-link active" href="http://twitter.com/@dayam_md">Twitter </a>
       <a class="nav-item nav-link" href="#">Resume</a>
-      <a class="nav-item nav-link" href="{% url 'allblogs' %}">blog</a>
+      <a class="nav-item nav-link active" href="{% url 'allblogs' %}">blog</a>
 
     </div>
   </div>
